--- a/views/base.pug
+++ b/views/base.pug
@@ -10,5 +10,5 @@ html(lang='en')
         title Natours | Exciting tours for adventurous people
 
     body
-        h1 Hello
-        p Hello
+        h1= tour
+        p This is just some text
