--- a/css/layout/footer.scss
+++ b/css/layout/footer.scss
@@ -34,6 +34,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: flex-end;
 }
 .footer__nav li {
   margin-left: 1.5rem;
