--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,5 +1,6 @@
 extends base
 block content
-    .card-container
-        each tour in tours
-            include components/_overviewTourCard
+    main.main
+        .card-container
+            each tour in tours
+                include components/_overviewTourCard
