--- a/views/base.pug
+++ b/views/base.pug
@@ -1,13 +1,14 @@
 doctype doctype
 html(lang='en')
     head
-        //- <link rel="stylesheet" href="style.css"> works too
-        meta(charset='utf-8')
-        meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700', rel='stylesheet')
-        link(rel='stylesheet', href='css/style.css')
-        link(rel='shortcut icon', href='img/favicon.png', type='image/png')
-        title Natours | #{title}
+        block head
+            //- <link rel="stylesheet" href="style.css"> works too
+            meta(charset='utf-8')
+            meta(name='viewport', content='width=device-width, initial-scale=1.0')
+            link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700', rel='stylesheet')
+            link(rel='stylesheet', href='/css/style.css')
+            link(rel='shortcut icon', href='/img/favicon.png', type='image/png')
+            title Natours | #{title}
 
     body
         // HEADER
@@ -15,10 +16,11 @@ html(lang='en')
         
 
         // SECTION
-        main.main
-            block content
-                h1 This is a placeholder
+        block content
+            h1 This is a placeholder
 
         // FOOTER
         include layout/_footer
         
+        block bottom
+            div
