--- a/views/components/_overviewTourCard.pug
+++ b/views/components/_overviewTourCard.pug
@@ -35,4 +35,5 @@
             span.card__footer-value= tour.ratingsAverage
             | 
             span.card__footer-text= `rating (${tour.ratingsQuantity})`
-        a.btn.btn--green.btn--small(href=`/tours/${tour.slug}`, target='_blank') Details
+        a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`) Details
+        //- a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`, target='_blank') Details
