--- a/views/layout/_header.pug
+++ b/views/layout/_header.pug
@@ -1,6 +1,6 @@
 header.header
     nav.nav.nav--tours
-        a.nav__el(href="#") All tours
+        a.nav__el(href="/") All tours
         form.nav__search
             // button.nav__search-btn
             //     <svg>
@@ -12,7 +12,7 @@ header.header
             //     class="nav__search-input"
         
     .header__logo
-        img(src='img/logo-white.png' alt='Natours logo')
+        img(src='/img/logo-white.png' alt='Natours logo')
 
     nav.nav.nav--user
         // a.nav__el(href='#') My bookings
