--- a/views/base/base.pug
+++ b/views/base/base.pug
@@ -12,7 +12,7 @@ html(lang='en')
 
     body
         // HEADER
-        include layout/_header
+        include ../layout/_header
         
 
         // SECTION
@@ -20,7 +20,7 @@ html(lang='en')
             h1 This is a placeholder
 
         // FOOTER
-        include layout/_footer
+        include ../layout/_footer
         
         block bottom
             div
