--- a/views/layout/_header.pug
+++ b/views/layout/_header.pug
@@ -16,9 +16,10 @@ header.header
 
     nav.nav.nav--user
         if user
-            a.nav__el.nav__el--logout(href='#') Log Out
+            a.nav__el.nav__el--logout(href='/logout') Log Out
             a.nav__el(href='#')
-                img.nav__user-img(src=`img/users/${user.photo}` alt=`${user.name.split(' ')[0]} photo`)
+                - const photo = user.photo ? user.photo : 'default.jpg';
+                img.nav__user-img(src=`/img/users/${photo}` alt=`${user.name.split(' ')[0]} photo`)
                 span= user.name.split(' ')[0]
         else
             a.nav__el(href='/login') Log in
