--- a/views/signup.pug
+++ b/views/signup.pug
@@ -5,17 +5,23 @@ block append head
 
 block content
   main.main
-    .login-form
-      h2.heading-secondary.ma-bt-lg Log into your account
+    .signup-form
+      h2.heading-secondary.ma-bt-lg Create a new account
       form.form
+        .form__group
+          label.form__label(for='name') Full Name
+          input#name.form__input(type='text', placeholder='Your Name', required)
         .form__group
           label.form__label(for='email') Email address
           input#email.form__input(type='email', placeholder='you@example.com', required)
         .form__group.ma-bt-md
           label.form__label(for='password') Password
           input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+        .form__group.ma-bt-md
+          label.form__label(for='passwordConfirm') Confirm Password
+          input#passwordConfirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
         .form__group
-          button.btn.btn--green Login
+          button.btn.btn--green Sign Up
 
 block append bottom
   // script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js')
