--- a/views/error.pug
+++ b/views/error.pug
@@ -3,6 +3,7 @@ block content
   main.main
     .error
       .error__title
-        h2.heading-secondary.heading-secondary--error= `Uh oh! Something went wrong! ${code}`   
+        //- h2.heading-secondary.heading-secondary--error= `Uh oh! Something went wrong! ${code}`   
+        h2.heading-secondary.heading-secondary--error Something's wrong!   
         h2.error__emoji 😢🤯
-      .error__msg= msg
+      .error__msg= `${msg}. CODE ${code}`
