--- a/views/components/_overviewTourCard.pug
+++ b/views/components/_overviewTourCard.pug
@@ -16,7 +16,7 @@
         .card__data
             svg.card__icon
                 use(xlink:href='img/icons.svg#icon-calendar')
-            span= tour.startDates[0].toLocaleString('en-us', { month: 'long', year: 'numeric' })
+            span= tour.startDates[0]? tour.startDates[0].toLocaleString('en-us', { month: 'long', year: 'numeric' }) : 'No Dates'
         .card__data
             svg.card__icon
                 use(xlink:href='img/icons.svg#icon-flag')
