--- a/views/components/_tourTemplate.pug
+++ b/views/components/_tourTemplate.pug
@@ -68,5 +68,5 @@ section.section-cta
     img.cta__img.cta__img--1(src=`/img/tours/${tour.images[2]}`, alt='Tour Picture 4')
     .cta__content
       h2.heading-secondary What are you waiting for?
-      p.cta__text= `${tour.duration > 1 ? `${tour.duration} days` : '1 day'}. 1 adventure. Infinite memories. Make it yours today!`
+      p.cta__text= `${(tour.duration + 1) > 1 ? `${tour.duration + 1} days` : '1 day'}. 1 adventure. Infinite memories. Make it yours today!`
       button.btn.btn--green.span-all-rows Book tour now!
