--- a/views/components/_tourTemplate.pug
+++ b/views/components/_tourTemplate.pug
@@ -69,4 +69,7 @@ section.section-cta
     .cta__content
       h2.heading-secondary What are you waiting for?
       p.cta__text= `${(tour.duration + 1) > 1 ? `${tour.duration + 1} days` : '1 day'}. 1 adventure. Infinite memories. Make it yours today!`
-      button.btn.btn--green.span-all-rows Book tour now!
+      if user
+        button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book tour now!
+      else
+        a.btn.btn--green.span-all-rows(href='/login') Log in to book tour
