--- a/views/final.pug
+++ b/views/final.pug
@@ -284,9 +284,9 @@ html(lang="en")
 					.col-lg-4.col-md-6
 						.feature_item
 							i.flaticon-sketch
-							h4 Concept Design
+							h4 REST Api
 							p
-								| If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.
+								| I can create a great api for you (an interface for your databse to interact with other devices using the internet) to manage a database for you. A RESTful api can also be part of your website.
 		// ================End Feature Area =================
 		// ================Home Gallery Area =================
 		section.home_gallery_area.p_120
