--- a/views/final.pug
+++ b/views/final.pug
@@ -492,8 +492,8 @@ html(lang="en")
 		script(src="/po/js/stellar.js")
 		script(src="/po/vendors/lightbox/simpleLightbox.min.js")
 		script(src="/po/vendors/nice-select/js/jquery.nice-select.min.js")
-		script(src="/po/vendors/isotope/imagesloaded.pkgd.min.js")
-		script(src="/po/vendors/isotope/isotope.pkgd.min.js")
+		//- script(src="/po/vendors/isotope/imagesloaded.pkgd.min.js")
+		//- script(src="/po/vendors/isotope/isotope.pkgd.min.js")
 		script(src="/po/vendors/owl-carousel/owl.carousel.min.js")
 		script(src="/po/vendors/popup/jquery.magnific-popup.min.js")
 		script(src="/po/js/jquery.ajaxchimp.min.js")
