--- a/views/final.pug
+++ b/views/final.pug
@@ -495,7 +495,7 @@ html(lang="en")
 		//- script(src="/po/vendors/isotope/imagesloaded.pkgd.min.js")
 		//- script(src="/po/vendors/isotope/isotope.pkgd.min.js")
 		script(src="/po/vendors/owl-carousel/owl.carousel.min.js")
-		script(src="/po/vendors/popup/jquery.magnific-popup.min.js")
+		//- script(src="/po/vendors/popup/jquery.magnific-popup.min.js")
 		script(src="/po/js/jquery.ajaxchimp.min.js")
 		script(src="/po/vendors/counter-up/jquery.waypoints.min.js")
 		script(src="/po/vendors/counter-up/jquery.counterup.min.js")
