--- a/views/final.pug
+++ b/views/final.pug
@@ -284,9 +284,10 @@ html(lang="en")
 					.col-lg-4.col-md-6
 						.feature_item
 							i.flaticon-sketch
-							h4 REST Api
+							h4 RESTful 
+								a(href="https://en.wikipedia.org/wiki/Application_programming_interface" target="_blank") | API
 							p
-								| I can create a great api for you (an interface for your databse to interact with other devices using the internet) to manage a database for you. A RESTful api can also be part of your website.
+								| I can create a nice API for you (an interface for your databse to interact with other devices using the internet) to manage your data. A RESTful API can also be part of your website.
 		// ================End Feature Area =================
 		// ================Home Gallery Area =================
 		section.home_gallery_area.p_120
