--- a/views/final.pug
+++ b/views/final.pug
@@ -285,7 +285,7 @@ html(lang="en")
 						.feature_item
 							i.flaticon-sketch
 							h4 RESTful 
-								a(href="https://en.wikipedia.org/wiki/Application_programming_interface" target="_blank") | API
+								a(href="https://en.wikipedia.org/wiki/Application_programming_interface" target="_blank") API
 							p
 								| I can create a nice API for you (an interface for your databse to interact with other devices using the internet) to manage your data. A RESTful API can also be part of your website.
 		// ================End Feature Area =================
@@ -493,8 +493,8 @@ html(lang="en")
 		script(src="/po/js/stellar.js")
 		script(src="/po/vendors/lightbox/simpleLightbox.min.js")
 		script(src="/po/vendors/nice-select/js/jquery.nice-select.min.js")
-		//- script(src="/po/vendors/isotope/imagesloaded.pkgd.min.js")
-		//- script(src="/po/vendors/isotope/isotope.pkgd.min.js")
+		script(src="/po/vendors/isotope/imagesloaded.pkgd.min.js")
+		script(src="/po/vendors/isotope/isotope.pkgd.min.js")
 		script(src="/po/vendors/owl-carousel/owl.carousel.min.js")
 		//- script(src="/po/vendors/popup/jquery.magnific-popup.min.js")
 		script(src="/po/js/jquery.ajaxchimp.min.js")
