--- a/views/final.pug
+++ b/views/final.pug
@@ -294,7 +294,7 @@ html(lang="en")
 			.container
 				.main_title
 					h2 Some of My Demo Projects
-					p Who are all real-life applicable and fully functioning.
+					p Which are all real-life applicable and fully functioning.
 				.isotope_fillter
 					ul.gallery_filter.list
 						li.active(data-filter="*")
