--- a/views/final.pug
+++ b/views/final.pug
@@ -467,11 +467,11 @@ html(lang="en")
 						aside.f_widget.news_widget
 							.f_title
 								h3 Newsletter
-							p Stay updated with our latest trends
+							p Stay updated
 							#mc_embed_signup
 								form#mc-embedded-subscribe-form.validate(action="https://gmail.us4.list-manage.com/subscribe/post?u=9cf2bc6ed146066f4e5c280bd&id=56714023ba" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="")
 									.input-group.d-flex.flex-row
-										input(name="EMAIL" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email")
+										input(name="EMAIL" placeholder="Enter your email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email")
 										button.btn.sub-btn
 											span.lnr.lnr-arrow-right
 									.mt-10.info
