added email to portfolio

--- a/views/final.pug
+++ b/views/final.pug
@@ -409,14 +409,23 @@ html(lang="en")
 					.col-lg-4.col-md-4.col-sm-6.api.fe.ng
 						.h_gallery_item
 							.g_img_item
-								img.img-fluid(src="/po/img/gallery/bookbike.png" alt="Natours")
+								img.img-fluid(src="/po/img/gallery/bookbike.png" alt="Bookbike")
 								a.light(href="https://bookthebike.web.app" target="_blank")
-									img(src="/po/img/gallery/icon.png" alt="Natours")
+									img(src="/po/img/gallery/icon.png" alt="Bookbike")
 							.g_item_text
 								h4 Bookbike
 								p Demo bike renting company
+					.col-lg-4.col-md-4.col-sm-6.api.fe.ng
+						.h_gallery_item
+							.g_img_item
+								img.img-fluid(src="/po/img/gallery/email.png" alt="Email")
+								a.light(href="https://email-cohen.web.app" target="_blank")
+									img(src="/po/img/gallery/icon.png" alt="Email")
+							.g_item_text
+								h4 Email
+								p Demo (but working) email service
 				.more_btn
-					a.main_btn(href="mailto:contact@eliavco.com" target="_blank") Order the next project
+					a.main_btn(href="mailto:byeliavcoapps@gmail.com" target="_blank") Order the next project
 		// ================End Home Gallery Area =================
 		// ================Testimonials Area =================
 		//
